--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,6 @@
   * {
     -webkit-font-smoothing: antialiased;
     font-family: 'Poppins', sans-serif;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
 }
